--- a/horabella/Base.lproj/Main.storyboard
+++ b/horabella/Base.lproj/Main.storyboard
@@ -113,7 +113,7 @@
                                                 </userDefinedRuntimeAttribute>
                                             </userDefinedRuntimeAttributes>
                                         </button>
-                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" text="Av. Castanheiras 1983 - Águas Claras Ed. Águas Limpas, Térreo, loja 18" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="0vu-08-6rh" userLabel="Salon Address">
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" text="Av. Castanheiras 1983 - Águas Claras Ed. Águas Limpas, Térreo, loja 18" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" minimumFontSize="8" translatesAutoresizingMaskIntoConstraints="NO" id="0vu-08-6rh" userLabel="Salon Address">
                                             <rect key="frame" x="8" y="219" width="474" height="14"/>
                                             <animations/>
                                             <constraints>
@@ -449,16 +449,16 @@
                                     <rect key="frame" x="0.0" y="0.0" width="118" height="143"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
-                                        <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" image="filtro_cabeloON" translatesAutoresizingMaskIntoConstraints="NO" id="H7J-Jl-R2T" userLabel="Filter Icon">
-                                            <rect key="frame" x="34" y="15" width="50" height="80"/>
+                                        <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="filtro_cabeloON" translatesAutoresizingMaskIntoConstraints="NO" id="H7J-Jl-R2T" userLabel="Filter Icon">
+                                            <rect key="frame" x="34" y="17" width="50" height="80"/>
                                             <animations/>
                                             <constraints>
-                                                <constraint firstAttribute="height" constant="80" id="V4Y-Mt-K7p"/>
-                                                <constraint firstAttribute="width" constant="50" id="gZf-YR-bs2"/>
+                                                <constraint firstAttribute="width" constant="50" id="htt-1a-xNV"/>
+                                                <constraint firstAttribute="height" constant="80" id="pdg-KP-zNj"/>
                                             </constraints>
                                         </imageView>
-                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="CABELO" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="8GD-7x-tZw" userLabel="Filter Label">
-                                            <rect key="frame" x="8" y="104" width="102" height="21"/>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="CABELO" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumFontSize="12" translatesAutoresizingMaskIntoConstraints="NO" id="8GD-7x-tZw" userLabel="Filter Label">
+                                            <rect key="frame" x="8" y="107" width="102" height="18"/>
                                             <animations/>
                                             <fontDescription key="fontDescription" type="system" pointSize="15"/>
                                             <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
@@ -471,11 +471,12 @@
                                 <animations/>
                                 <color key="backgroundColor" red="1" green="0.29803921568627451" blue="0.396078431372549" alpha="1" colorSpace="calibratedRGB"/>
                                 <constraints>
-                                    <constraint firstItem="H7J-Jl-R2T" firstAttribute="centerX" secondItem="6Y9-pv-Fkd" secondAttribute="centerX" id="0AE-Ho-sgB"/>
-                                    <constraint firstItem="8GD-7x-tZw" firstAttribute="leading" secondItem="6Y9-pv-Fkd" secondAttribute="leadingMargin" id="Vik-Ix-7zK"/>
-                                    <constraint firstItem="8GD-7x-tZw" firstAttribute="bottom" secondItem="6Y9-pv-Fkd" secondAttribute="bottomMargin" constant="-10" id="WYC-n1-CzT"/>
-                                    <constraint firstItem="8GD-7x-tZw" firstAttribute="top" secondItem="H7J-Jl-R2T" secondAttribute="bottom" constant="10" id="dLa-VF-xf9"/>
-                                    <constraint firstAttribute="trailingMargin" secondItem="8GD-7x-tZw" secondAttribute="trailing" id="djP-hV-E7g"/>
+                                    <constraint firstItem="8GD-7x-tZw" firstAttribute="centerX" secondItem="6Y9-pv-Fkd" secondAttribute="centerX" id="Ir5-yZ-fNW"/>
+                                    <constraint firstAttribute="trailingMargin" secondItem="8GD-7x-tZw" secondAttribute="trailing" id="Jnb-p5-WPr"/>
+                                    <constraint firstItem="8GD-7x-tZw" firstAttribute="top" secondItem="H7J-Jl-R2T" secondAttribute="bottom" constant="10" id="LDB-YH-x5o"/>
+                                    <constraint firstItem="H7J-Jl-R2T" firstAttribute="centerX" secondItem="6Y9-pv-Fkd" secondAttribute="centerX" id="blz-zN-Nld"/>
+                                    <constraint firstItem="H7J-Jl-R2T" firstAttribute="centerY" secondItem="6Y9-pv-Fkd" secondAttribute="centerY" constant="-14.5" id="jLO-QN-aMT"/>
+                                    <constraint firstItem="8GD-7x-tZw" firstAttribute="leading" secondItem="6Y9-pv-Fkd" secondAttribute="leadingMargin" id="nu0-ps-jgr"/>
                                 </constraints>
                                 <connections>
                                     <outlet property="filterNameLabel" destination="8GD-7x-tZw" id="gc2-iK-I7o"/>
@@ -873,4 +874,5 @@ sofnaof</string>
         <image name="saloesTab_on" width="39" height="18"/>
         <image name="starPinkIcon" width="17" height="15"/>
     </resources>
+    <color key="tintColor" red="1" green="0.29803921568627451" blue="0.396078431372549" alpha="1" colorSpace="calibratedRGB"/>
 </document>
