--- a/horabella/Login.storyboard
+++ b/horabella/Login.storyboard
@@ -18,11 +18,11 @@
                         <sections>
                             <tableViewSection id="G0u-A5-Yfz">
                                 <cells>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="198" id="D54-w9-thw">
-                                        <rect key="frame" x="0.0" y="64" width="600" height="198"/>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="146" id="D54-w9-thw">
+                                        <rect key="frame" x="0.0" y="64" width="600" height="146"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="D54-w9-thw" id="NtV-5R-wLh">
-                                            <rect key="frame" x="0.0" y="0.0" width="600" height="198"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="600" height="146"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <animations/>
                                         </tableViewCellContentView>
@@ -30,7 +30,7 @@
                                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                     </tableViewCell>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" id="eLh-8k-Ku1">
-                                        <rect key="frame" x="0.0" y="262" width="600" height="44"/>
+                                        <rect key="frame" x="0.0" y="210" width="600" height="44"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="eLh-8k-Ku1" id="WtI-qy-iQn">
                                             <rect key="frame" x="0.0" y="0.0" width="600" height="44"/>
@@ -67,7 +67,7 @@
                                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                     </tableViewCell>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" id="W69-la-ASW">
-                                        <rect key="frame" x="0.0" y="306" width="600" height="44"/>
+                                        <rect key="frame" x="0.0" y="254" width="600" height="44"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="W69-la-ASW" id="u4m-QP-Z0c">
                                             <rect key="frame" x="0.0" y="0.0" width="600" height="44"/>
@@ -104,7 +104,7 @@
                                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                     </tableViewCell>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" id="1lO-MZ-yoB">
-                                        <rect key="frame" x="0.0" y="350" width="600" height="44"/>
+                                        <rect key="frame" x="0.0" y="298" width="600" height="44"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="1lO-MZ-yoB" id="CnG-j4-xqj">
                                             <rect key="frame" x="0.0" y="0.0" width="600" height="44"/>
@@ -141,7 +141,7 @@
                                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                     </tableViewCell>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" id="Om6-Sk-LVw">
-                                        <rect key="frame" x="0.0" y="394" width="600" height="44"/>
+                                        <rect key="frame" x="0.0" y="342" width="600" height="44"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="Om6-Sk-LVw" id="Bdk-Bc-0dk">
                                             <rect key="frame" x="0.0" y="0.0" width="600" height="44"/>
@@ -178,7 +178,7 @@
                                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                     </tableViewCell>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" id="L6j-Ui-Fmc">
-                                        <rect key="frame" x="0.0" y="438" width="600" height="44"/>
+                                        <rect key="frame" x="0.0" y="386" width="600" height="44"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="L6j-Ui-Fmc" id="9zf-Qj-Qpv">
                                             <rect key="frame" x="0.0" y="0.0" width="600" height="44"/>
@@ -217,8 +217,35 @@
                                         <animations/>
                                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                     </tableViewCell>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" id="rL6-gX-2K3">
+                                        <rect key="frame" x="0.0" y="430" width="600" height="44"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="rL6-gX-2K3" id="eWi-2m-xiz">
+                                            <rect key="frame" x="0.0" y="0.0" width="600" height="44"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <segmentedControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="plain" selectedSegmentIndex="0" translatesAutoresizingMaskIntoConstraints="NO" id="vJh-HY-6Zt">
+                                                    <rect key="frame" x="8" y="8" width="584" height="29"/>
+                                                    <animations/>
+                                                    <segments>
+                                                        <segment title="Homem"/>
+                                                        <segment title="Mulher"/>
+                                                    </segments>
+                                                    <color key="tintColor" red="0.34901960784313724" green="0.23529411764705882" blue="0.33333333333333331" alpha="1" colorSpace="calibratedRGB"/>
+                                                </segmentedControl>
+                                            </subviews>
+                                            <animations/>
+                                            <constraints>
+                                                <constraint firstItem="vJh-HY-6Zt" firstAttribute="leading" secondItem="eWi-2m-xiz" secondAttribute="leadingMargin" id="1uL-IS-doI"/>
+                                                <constraint firstAttribute="trailingMargin" secondItem="vJh-HY-6Zt" secondAttribute="trailing" id="o0f-Ef-MY7"/>
+                                                <constraint firstItem="vJh-HY-6Zt" firstAttribute="centerY" secondItem="eWi-2m-xiz" secondAttribute="centerY" id="wK9-ik-0MD"/>
+                                            </constraints>
+                                        </tableViewCellContentView>
+                                        <animations/>
+                                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                                    </tableViewCell>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" id="mX3-FY-3NQ">
-                                        <rect key="frame" x="0.0" y="482" width="600" height="44"/>
+                                        <rect key="frame" x="0.0" y="474" width="600" height="44"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="mX3-FY-3NQ" id="ikV-Zk-RhT">
                                             <rect key="frame" x="0.0" y="0.0" width="600" height="44"/>
@@ -255,7 +282,7 @@
                                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                     </tableViewCell>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="58" id="hKn-KJ-c4e">
-                                        <rect key="frame" x="0.0" y="526" width="600" height="58"/>
+                                        <rect key="frame" x="0.0" y="518" width="600" height="58"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="hKn-KJ-c4e" id="GZq-jt-ZIg">
                                             <rect key="frame" x="0.0" y="0.0" width="600" height="58"/>
@@ -311,6 +338,7 @@
                         <outlet property="birthdateTextField" destination="Ofn-Ep-1N5" id="yvQ-Lm-V6Y"/>
                         <outlet property="emailTextField" destination="v3x-VY-ccq" id="pVY-ca-3tU"/>
                         <outlet property="firstNameTextField" destination="f7K-Ty-0c5" id="nlA-bh-4Ed"/>
+                        <outlet property="genderSegControl" destination="vJh-HY-6Zt" id="NNu-8T-e5M"/>
                         <outlet property="lastNameTextField" destination="b89-8K-d0j" id="WhE-lf-O2E"/>
                         <outlet property="passwordTextField" destination="2sV-Tx-as7" id="5GG-QK-DWg"/>
                         <outlet property="phoneTextField" destination="Yaa-5f-24V" id="hoi-50-ULe"/>
@@ -323,6 +351,7 @@
         <!--Log In View Controller-->
         <scene sceneID="C8W-Pl-Ec8">
             <objects>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Azn-ix-NmF" userLabel="First Responder" sceneMemberID="firstResponder"/>
                 <viewController id="BuX-9p-Kwg" customClass="LogInViewController" customModule="horabella" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="Swc-N2-eA3"/>
@@ -389,7 +418,7 @@
                                     <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
                                 <connections>
-                                    <action selector="getCurrentUser:" destination="BuX-9p-Kwg" eventType="touchUpInside" id="TvN-JY-W2z"/>
+                                    <action selector="forgotPassword:" destination="BuX-9p-Kwg" eventType="touchUpInside" id="6h0-nI-Y8V"/>
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="XG5-2m-tsy">
@@ -461,7 +490,6 @@
                         <segue destination="keR-eg-Vdy" kind="show" identifier="signUpFacebookSegue" id="TAM-y9-ifY"/>
                     </connections>
                 </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="Azn-ix-NmF" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="2705" y="405"/>
         </scene>
@@ -489,6 +517,6 @@
         <image name="loginBackground" width="375" height="667"/>
     </resources>
     <inferredMetricsTieBreakers>
-        <segue reference="TAM-y9-ifY"/>
+        <segue reference="zH1-gu-aNZ"/>
     </inferredMetricsTieBreakers>
 </document>
